syntax = "proto3";

package xbasissvc.internal.application;

import "konekko.me/xbasis/commons/dto/commons.proto";

service ApplicationStatus {

    rpc GetAppClientStatus (GetAppClientStatusRequest) returns (GetAppClientStatusResponse);

}

message GetAppClientStatusRequest {
    string clientId = 1;
    string redirect = 2;
}

message GetAppClientStatusResponse {
    xbasis.commons.dto.State state = 1;
    string appId = 2;
    bool appQuarantine = 3;
    int64 clientPlatform = 4;
    int64 clientEnabled = 5;
    int64 type = 6;
    bool canRedirect = 7;
    string secretKey = 8;
    string serviceName = 9;
}